# root_cause_analysis_and_model_checking

./: .gitattributes  .gitmodules  CausalInferenceAndRCAPackages.md  README.md  RootCauseAnalysisResources.md
docs/: CausalityPearlNotes.docx  CausalityPredictionSearchSpirtesNotes.docx  CausalityPredictionSearchSpirtesNotes.pptx  CausalityProbabilityAndTimeKleinbergNotes.docx  CausalityProbabilityAndTimeKleinbergNotes.pptx  CausalityProbabilityAndTimeNotes.docx  CausalityProbabilityAndTimePresentation.pptx  GeneratingSyntheticEventset.pptx  GeneratingSyntheticEventsets.docx  LearningBayesianNetworksNeapolitanNotes.docx  LearningBayesianNetworksNeapolitanNotes.pptx  LogicSystemsOverview.docx  OverviewOfProbabilisticCausality.docx  ProbabilisticReasoningInIntelligentSystemsPearlNotes.docx  ReinforcementLearningToDetermineCausalRelations.docx  RootCauseAnalysisNotes.docx  RootCauseAnalysisforFulfillmentSplittingDecisions.docx  RootCauseAnalysisforFulfillmentSplittingDecisions.pptx  StructuralEquationModelingOverview.docx  ~$otCauseAnalysisNotes.docx
literature/: README.md
src/causal-learn/: pyproject.toml
src/causal-learn/tests/: test_causal_learn.py
src/causalml/: pyproject.toml
src/causalml/tests/: test_causalml.py
src/dowhy/: pyproject.toml
src/dowhy/tests/: test_dowhy.py
src/gcastle/: pyproject.toml
src/gcastle/tests/: test_gcastle.py
src/rca-demo/: graphframes_demo.py  pyproject.toml  run_demo.sh
src/rca-demo/rca_demo/: fevent.py  fevent_dataset.py  fulfillment_events.yaml
src/rca-demo/tests/: test_rca_demo.py
src/rca-pyspark/: pyproject.toml
(+9 files in other folders)
